syntax = "proto3";

option java_package = "de.ruoff.consistency.service.logging";
option java_multiple_files = true;

service LoggingService {
    rpc LogEvent (LogEventRequest) returns (LogEventResponse);
    rpc ExportLogs (ExportRequest) returns (ExportResponse);
}

message LogEventRequest {
    string eventId = 1;
    string gameId = 2;
    string username = 3;
    string eventType = 4;
    int64 delayMs = 5;
    int64 originTimestamp = 6;
    int32 score = 7;
    string opponentUsername = 8;
}

message LogEventResponse {
    bool success = 1;
}

message ExportRequest {
    string gameId = 1;
}
message ExportResponse {
    bool success = 1;
}
